<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".homesweethome.activity.Home">

    <View
        android:id="@+id/divider7"
        android:layout_width="match_parent"
        android:layout_height="3dp"
        android:layout_marginTop="7dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintTop_toBottomOf="@+id/lamp_quarto3"
        tools:layout_editor_absoluteX="-16dp" />

    <View
        android:id="@+id/divider6"
        android:layout_width="match_parent"
        android:layout_height="3dp"
        android:layout_marginTop="7dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintTop_toBottomOf="@+id/lamp_quarto2"
        tools:layout_editor_absoluteX="0dp" />

    <View
        android:id="@+id/divider5"
        android:layout_width="match_parent"
        android:layout_height="3dp"
        android:layout_marginTop="7dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintTop_toBottomOf="@+id/lamp_quarto1"
        tools:layout_editor_absoluteX="16dp" />

    <View
        android:id="@+id/divider4"
        android:layout_width="match_parent"
        android:layout_height="3dp"
        android:layout_marginTop="7dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintTop_toBottomOf="@+id/lamp_banheiro"
        tools:layout_editor_absoluteX="0dp" />

    <View
        android:id="@+id/divider3"
        android:layout_width="match_parent"
        android:layout_height="3dp"
        android:layout_marginTop="7dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintTop_toBottomOf="@+id/lamp_corredor"
        tools:layout_editor_absoluteX="0dp" />

    <View
        android:id="@+id/divider2"
        android:layout_width="match_parent"
        android:layout_height="3dp"
        android:layout_marginTop="7dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintTop_toBottomOf="@+id/lamp_cozinha"
        tools:layout_editor_absoluteX="0dp" />

    <Switch
        android:id="@+id/ar_quarto3"
        android:layout_width="94dp"
        android:layout_height="27dp"
        android:layout_marginTop="4dp"
        app:layout_constraintStart_toEndOf="@+id/textView39"
        app:layout_constraintTop_toBottomOf="@+id/textView35" />

    <TextView
        android:id="@+id/textView39"
        android:layout_width="24dp"
        android:layout_height="27dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="4dp"
        android:text="@string/ar3"
        android:textSize="18sp"
        app:layout_constraintStart_toEndOf="@+id/lamp_quarto3"
        app:layout_constraintTop_toBottomOf="@+id/textView35" />

    <Switch
        android:id="@+id/ar_quarto1"
        android:layout_width="94dp"
        android:layout_height="27dp"
        android:layout_marginTop="4dp"
        app:layout_constraintStart_toEndOf="@+id/textView37"
        app:layout_constraintTop_toBottomOf="@+id/textView31" />

    <TextView
        android:id="@+id/textView37"
        android:layout_width="24dp"
        android:layout_height="27dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="4dp"
        android:text="@string/ar1"
        android:textSize="18sp"
        app:layout_constraintStart_toEndOf="@+id/lamp_quarto1"
        app:layout_constraintTop_toBottomOf="@+id/textView31" />

    <TextView
        android:id="@+id/textView35"
        style="@android:style/Widget.DeviceDefault.Light.TextView.SpinnerItem"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="16dp"
        android:text="@string/quarto3"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView32" />

    <TextView
        android:id="@+id/textView34"
        android:layout_width="82dp"
        android:layout_height="27dp"
        android:layout_marginStart="52dp"
        android:layout_marginLeft="52dp"
        android:layout_marginTop="4dp"
        android:text="@string/lampada7"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView35" />

    <Switch
        android:id="@+id/lamp_quarto3"
        android:layout_width="94dp"
        android:layout_height="27dp"
        android:layout_marginTop="4dp"
        app:layout_constraintStart_toEndOf="@+id/textView34"
        app:layout_constraintTop_toBottomOf="@+id/textView35" />

    <TextView
        android:id="@+id/textView33"
        style="@android:style/Widget.DeviceDefault.Light.TextView.SpinnerItem"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="16dp"
        android:text="@string/quarto2"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView30" />

    <TextView
        android:id="@+id/textView32"
        android:layout_width="82dp"
        android:layout_height="27dp"
        android:layout_marginStart="52dp"
        android:layout_marginLeft="52dp"
        android:layout_marginTop="4dp"
        android:text="@string/lampada6"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView33" />

    <Switch
        android:id="@+id/lamp_quarto2"
        android:layout_width="94dp"
        android:layout_height="27dp"
        android:layout_marginTop="4dp"
        app:layout_constraintStart_toEndOf="@+id/textView32"
        app:layout_constraintTop_toBottomOf="@+id/textView33" />

    <TextView
        android:id="@+id/textView31"
        style="@android:style/Widget.DeviceDefault.Light.TextView.SpinnerItem"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="16dp"
        android:text="@string/quarto1"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView29" />

    <TextView
        android:id="@+id/textView30"
        android:layout_width="82dp"
        android:layout_height="27dp"
        android:layout_marginStart="52dp"
        android:layout_marginLeft="52dp"
        android:layout_marginTop="4dp"
        android:text="@string/lampada5"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView31" />

    <Switch
        android:id="@+id/ar_quarto2"
        android:layout_width="94dp"
        android:layout_height="27dp"
        android:layout_marginTop="4dp"
        app:layout_constraintStart_toEndOf="@+id/textView36"
        app:layout_constraintTop_toBottomOf="@+id/textView33" />

    <TextView
        android:id="@+id/textView36"
        android:layout_width="24dp"
        android:layout_height="27dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="4dp"
        android:text="@string/ar2"
        android:textSize="18sp"
        app:layout_constraintStart_toEndOf="@+id/lamp_quarto2"
        app:layout_constraintTop_toBottomOf="@+id/textView33" />

    <Switch
        android:id="@+id/lamp_quarto1"
        android:layout_width="94dp"
        android:layout_height="27dp"
        android:layout_marginTop="4dp"
        app:layout_constraintStart_toEndOf="@+id/textView30"
        app:layout_constraintTop_toBottomOf="@+id/textView31" />

    <TextView
        android:id="@+id/textView28"
        style="@android:style/Widget.DeviceDefault.Light.TextView.SpinnerItem"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="16dp"
        android:text="@string/banheiro"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView26" />

    <TextView
        android:id="@+id/textView29"
        android:layout_width="82dp"
        android:layout_height="27dp"
        android:layout_marginStart="52dp"
        android:layout_marginLeft="52dp"
        android:layout_marginTop="4dp"
        android:text="@string/lampada4"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView28" />

    <Switch
        android:id="@+id/lamp_banheiro"
        android:layout_width="94dp"
        android:layout_height="27dp"
        android:layout_marginTop="4dp"
        app:layout_constraintStart_toEndOf="@+id/textView29"
        app:layout_constraintTop_toBottomOf="@+id/textView28" />

    <TextView
        android:id="@+id/textView27"
        style="@android:style/Widget.DeviceDefault.Light.TextView.SpinnerItem"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="16dp"
        android:text="@string/corredor"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView24" />

    <Switch
        android:id="@+id/lamp_corredor"
        android:layout_width="94dp"
        android:layout_height="27dp"
        android:layout_marginTop="4dp"
        app:layout_constraintStart_toEndOf="@+id/textView26"
        app:layout_constraintTop_toBottomOf="@+id/textView27" />

    <TextView
        android:id="@+id/textView26"
        android:layout_width="82dp"
        android:layout_height="27dp"
        android:layout_marginStart="52dp"
        android:layout_marginLeft="52dp"
        android:layout_marginTop="4dp"
        android:text="@string/lampada3"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView27" />

    <TextView
        android:id="@+id/textView24"
        android:layout_width="82dp"
        android:layout_height="27dp"
        android:layout_marginStart="52dp"
        android:layout_marginLeft="52dp"
        android:layout_marginTop="4dp"
        android:text="@string/lampada2"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView25" />

    <TextView
        android:id="@+id/textView25"
        style="@android:style/Widget.DeviceDefault.Light.TextView.SpinnerItem"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="16dp"
        android:text="@string/cozinha1"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <TextView
        android:id="@+id/textView2"
        style="@android:style/Widget.DeviceDefault.Light.TextView.SpinnerItem"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="16dp"
        android:text="@string/sala_de_estar"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Switch
        android:id="@+id/lamp_cozinha"
        android:layout_width="94dp"
        android:layout_height="27dp"
        android:layout_marginTop="4dp"
        app:layout_constraintStart_toEndOf="@+id/textView24"
        app:layout_constraintTop_toBottomOf="@+id/textView25" />

    <Switch
        android:id="@+id/lamp_sala"
        android:layout_width="94dp"
        android:layout_height="27dp"
        android:layout_marginTop="4dp"
        app:layout_constraintStart_toEndOf="@+id/textView3"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <TextView
        android:id="@+id/textView3"
        style="@android:style/Widget.DeviceDefault.Light.TextView"
        android:layout_width="83dp"
        android:layout_height="27dp"
        android:layout_marginStart="52dp"
        android:layout_marginLeft="52dp"
        android:layout_marginTop="4dp"
        android:text="@string/lampada1"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <View
        android:id="@+id/divider"
        android:layout_width="match_parent"
        android:layout_height="3dp"
        android:layout_marginTop="7dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintTop_toBottomOf="@+id/lamp_sala"
        tools:layout_editor_absoluteX="0dp" />

</androidx.constraintlayout.widget.ConstraintLayout>